unpackaged/main/default/objects/Service__c/Service__c.object-meta.xml
<CustomObject>
    <description>GFC-1456</description>
    <label>Service</label>
    <nameField>
        <displayFormat>Srv-{00000}</displayFormat>
        <label>Numéro de service</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>