unpackaged/main/default/objects/Service__c/fields/Assurance_retenue__c.field-meta.xml
<CustomField>
    <fullName>Assurance_retenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assurance retenue?</label>
    <type>Checkbox</type>
</CustomField>