unpackaged/main/default/objects/Service__c/fields/Formule__c.field-meta.xml
<CustomField>
    <fullName>Formule__c</fullName>
    <label>Formule</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Marque__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smart Protect</fullName>
            </value>
            <value>
                <fullName>Smart Protect +</fullName>
            </value>
            <value>
                <fullName>Sérénité</fullName>
            </value>
            <value>
                <fullName>Sérénité +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>