unpackaged/main/default/objects/Service__c/fields/Garantie_conducteur__c.field-meta.xml
<CustomField>
    <fullName>Garantie_conducteur__c</fullName>
    <formula>IF
(
OR(ispickval(Formule__c,&#39;Smart Protect +&#39;),ispickval(Formule__c,&#39;Sérénité +&#39;))
,
TRUE
,
False

)</formula>
    <label>Garantie conducteur</label>
    <type>Checkbox</type>
</CustomField>