unpackaged/main/default/objects/Service__c/fields/Marchandises_transportees__c.field-meta.xml
<CustomField>
    <fullName>Marchandises_transportees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marchandises transportées</label>
    <type>Checkbox</type>
</CustomField>