unpackaged/main/default/objects/Service__c/fields/Marque__c.field-meta.xml
<CustomField>
    <fullName>Marque__c</fullName>
    <label>Marque</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Petit Forestier</fullName>
            </value>
            <value>
                <fullName>Stricher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>