unpackaged/main/default/objects/Service__c/fields/Prix_total_Assurance__c.field-meta.xml
<CustomField>
    <fullName>Prix_total_Assurance__c</fullName>
    <formula>Prix_unitaire_assurance_Formule__c * Quantity__c</formula>
    <label>Prix total Assurance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>