unpackaged/main/default/objects/Service__c/fields/Prix_unitaire_assurance_Formule__c.field-meta.xml
<CustomField>
    <fullName>Prix_unitaire_assurance_Formule__c</fullName>
    <description>GFC-1859</description>
    <formula>IF
(
AND(ISPICKVAL(Formule__c,&quot;&quot;),  Marchandises_transportees__c = TRUE ,  ISPICKVAL(Type_de_vehicule__c,&quot;VL&quot;)),
8.825,
IF
(
AND(ISPICKVAL(Formule__c,&quot;&quot;),  Marchandises_transportees__c = False,  ISPICKVAL(Type_de_vehicule__c,&quot;VL&quot;)),
0,
IF
(
AND(OR(ISPICKVAL(Formule__c,&quot;Smart Protect&quot;),ISPICKVAL(Formule__c,&quot;Sérénité&quot;)),  Marchandises_transportees__c = TRUE ,  ISPICKVAL(Type_de_vehicule__c,&quot;VL&quot;)),
68.825,
IF
(
AND(OR(ISPICKVAL(Formule__c,&quot;Smart Protect&quot;),ISPICKVAL(Formule__c,&quot;Sérénité&quot;)),  Marchandises_transportees__c = FALSE,  ISPICKVAL(Type_de_vehicule__c,&quot;VL&quot;)),
60,
IF
(
AND(OR(ISPICKVAL(Formule__c,&quot;Smart Protect +&quot;),ISPICKVAL(Formule__c,&quot;Sérénité +&quot;)),  Marchandises_transportees__c = TRUE ,  ISPICKVAL(Type_de_vehicule__c,&quot;VL&quot;)),
86.495,
IF
(
AND(OR(ISPICKVAL(Formule__c,&quot;Smart Protect +&quot;),ISPICKVAL(Formule__c,&quot;Sérénité +&quot;)),  Marchandises_transportees__c = FALSE,  ISPICKVAL(Type_de_vehicule__c,&quot;VL&quot;)),
77.67,
IF
(
AND(ISPICKVAL(Formule__c,&quot;&quot;),   ISPICKVAL(Type_de_vehicule__c,&quot;PL&quot;)),
0,
IF
(
AND(OR(ISPICKVAL(Formule__c,&quot;Smart Protect&quot;),ISPICKVAL(Formule__c,&quot;Sérénité&quot;)),  ISPICKVAL(Type_de_vehicule__c,&quot;PL&quot;)),
77.5,
IF
(
AND(OR(ISPICKVAL(Formule__c,&quot;Smart Protect +&quot;),ISPICKVAL(Formule__c,&quot;Sérénité +&quot;)),  ISPICKVAL(Type_de_vehicule__c,&quot;PL&quot;)),
100.58,0
)

)
)
)
)
)
)
)
)</formula>
    <label>Prix unitaire assurance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>