unpackaged/main/default/objects/Service__c/fields/Rachat_choc_en_hauteur__c.field-meta.xml
<CustomField>
    <fullName>Rachat_choc_en_hauteur__c</fullName>
    <formula>IF
(
OR(ispickval(Formule__c,&#39;Smart Protect +&#39;),ispickval(Formule__c,&#39;Sérénité +&#39;))
,
TRUE
,
False

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rachat choc en hauteur</label>
    <type>Checkbox</type>
</CustomField>