unpackaged/main/default/objects/Service__c/fields/Type_de_vehicule__c.field-meta.xml
<CustomField>
    <fullName>Type_de_vehicule__c</fullName>
    <label>Type de véhicule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VL</fullName>
            </value>
            <value>
                <fullName>PL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>