unpackaged/main/default/objects/Service__c/recordTypes/Assurance_Affinitaire.recordType-meta.xml
<RecordType>
    <fullName>Assurance_Affinitaire</fullName>
    <active>true</active>
    <label>Assurance Affinitaire</label>
</RecordType>