unpackaged/main/default/objects/Service__c/recordTypes/Assurance_Affinitaire_DRAFT.recordType-meta.xml
<RecordType>
    <fullName>Assurance_Affinitaire_DRAFT</fullName>
    <active>true</active>
    <label>Assurance Affinitaire -  DRAFT</label>
</RecordType>