unpackaged/main/default/objects/Service__c/recordTypes/Assurance_Affinitaire_Lecture_Seule.recordType-meta.xml
<RecordType>
    <fullName>Assurance_Affinitaire_Lecture_Seule</fullName>
    <active>true</active>
    <label>Assurance Affinitaire - Lecture Seule</label>
</RecordType>