unpackaged/main/default/objects/Service__c/validationRules/VR_ServicesAffinitaires_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ServicesAffinitaires_Creation</fullName>
    <active>true</active>
    <description>Interdire de créer un record service si devis synchronisé</description>
    <errorConditionFormula>AND 
(
ISNEW(),
 Devis__r.Synchronise__c = True
)</errorConditionFormula>
    <errorMessage>L&#39;ajout d&#39;un service n&#39;est pas autorisé pour les devis synchronisés</errorMessage>
</ValidationRule>