unpackaged/main/default/objects/Service__c/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>all</label>
</ListView>